force-app/main/default/objects/AFF_Job__c/AFF_Job__c.object-meta.xml
<CustomObject>
    <description>The master record for the entire long-running process. It acts as the central point of control and status monitoring.</description>
    <label>AFF Job</label>
    <nameField>
        <label>AFF_Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AFF Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>