force-app/main/default/objects/AFF_Job__c/fields/Current_Step_Index__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_Index__c</fullName>
    <description>The index of the AFF_Sub_Action__c record currently being processed.</description>
    <inlineHelpText>The index of the AFF_Sub_Action__c record currently being processed.</inlineHelpText>
    <label>Current Step Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>