force-app/main/default/objects/AFF_Job__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Down (Normal execution), Up (Compensation execution).</description>
    <inlineHelpText>Down (Normal execution), Up (Compensation execution).</inlineHelpText>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>