force-app/main/default/objects/AFF_Job__c/fields/Engine_Type__c.field-meta.xml
<CustomField>
    <fullName>Engine_Type__c</fullName>
    <description>The engine used to run this job</description>
    <label>Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotDefined</fullName>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>PlatformEvent</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>