force-app/main/default/objects/AFF_Job__c/fields/Final_Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Final_Error_Details__c</fullName>
    <description>To store the terminal error message if a step or a compensation permanently fails, providing a clear audit trail.</description>
    <label>Final Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>