force-app/main/default/objects/AFF_Job__c/fields/Finalizer_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Finalizer_Class_Name__c</fullName>
    <description>The fully qualified Apex class name of the logic for this step (e.g., &apos;MyOrg.CreateAccountStep&apos;) finalization class.</description>
    <label>Finalizer Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>