force-app/main/default/objects/AFF_Job__c/fields/Finalizer_Executed__c.field-meta.xml
<CustomField>
    <fullName>Finalizer_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Finalizer has been executed already, False otherwise</description>
    <label>Finalizer Executed</label>
    <type>Checkbox</type>
</CustomField>