force-app/main/default/objects/AFF_Job__c/fields/Total_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Steps__c</fullName>
    <description>The total number of steps in the job. (TBD)</description>
    <label>Total Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>